# zeque-lang

./: Cargo.toml  README.md  grammar.ebnf
compiler/sig_ast/: Cargo.toml
compiler/sig_ast/src/: ast.rs  ast_to_hir.rs  comptime_interpreter.rs  hir.rs  hir_to_thir.rs  lexer.rs  lib.rs  parse.rs  parser.rs  thir.rs  thir_to_wasm.rs  util.rs
compiler/sig_ast/src/hir/: printer.rs
compiler/sig_ast/src/hir_to_thir/: state.rs
compiler/sig_ast/src/thir/: printer.rs  sizealign.rs  typeck.rs
compiler/zeque/: Cargo.toml
compiler/zeque/src/: main.rs
compiler/zeque_ast/: Cargo.toml
compiler/zeque_ast/src/: ast.rs  ast_to_hir.rs  hir.rs  hir_to_thir.rs  lib.rs  mir.rs  nameres.rs  parse.rs  parser.rs  sema.rs  thir.rs  thir_to_wasm.rs  util.rs
compiler/zeque_ast/src/ast/: printer.rs
compiler/zeque_ast/src/hir/: error.rs  printer.rs
compiler/zeque_ast/src/hir_to_thir/: state.rs
compiler/zeque_ast/src/snapshots/: sig_ast__ast_to_hir__tests__field_decl.snap  sig_ast__ast_to_hir__tests__function_call.snap  sig_ast__ast_to_hir__tests__if_then_else.snap  sig_ast__ast_to_hir__tests__nested_ctxs.snap  sig_ast__ast_to_hir__tests__one_function.snap  sig_ast__ast_to_hir__tests__precedence.snap  sig_ast__ast_to_hir__tests__reference_outer_ctxs.snap  sig_ast__ast_to_hir__tests__stmt.snap  sig_ast__ast_to_hir__tests__struct_def.snap  zeque_ast__ast_to_hir__tests__field_decl.snap  zeque_ast__ast_to_hir__tests__function_call.snap  zeque_ast__ast_to_hir__tests__if_then_else.snap  zeque_ast__ast_to_hir__tests__nested_ctxs.snap  zeque_ast__ast_to_hir__tests__no_return.snap  zeque_ast__ast_to_hir__tests__one_function.snap  zeque_ast__ast_to_hir__tests__precedence.snap  zeque_ast__ast_to_hir__tests__reference_outer_ctxs.snap  zeque_ast__ast_to_hir__tests__stmt.snap  zeque_ast__ast_to_hir__tests__struct_def.snap
compiler/zeque_ast/src/thir/: local_offsets.rs  typeck.rs
compiler/zeque_lexer/: Cargo.toml
compiler/zeque_lexer/src/: lib.rs
compiler/zeque_parse/: Cargo.toml
examples/: brainstorm.sig  brainstorm.zq  calc.zq  clz.sig  clz.zq  comptime_closure.zq  const_decls.zq  hello.sig  hello.zq  if.sig  if.zq  linear.zq  struct.sig  struct.zq
language_server/: Cargo.toml
language_server/src/: buffered_rope.rs  fast_replace_string.rs  gap_buffer.rs  lexeme.rs  lexeme2.rs  main.rs  text_buffer.rs  unit.rs
language_server/src/gap_buffer/: gap_buffer.rs  mod.rs  string_gap_buffer.rs  uninit_buffer.rs
runtime/: Cargo.toml
runtime/src/: main.rs
(+1 files in other folders)
