[package]
name = "sig_ast"
version = "0.1.0"
edition = "2021"

[dependencies]
peg = "0.8.2"
thiserror = "1.0.58"
smallvec = "1.13.2"
wasm-encoder = "0.209.1"
clap = { version = "4.5.4", features = ["derive"] }
displaydoc = "0.2.4"
string-interner = "0.17.0"
logos = "0.14.0"
unicode-ident = "1.0.12"
smol_str = "0.2.2"
combine = "4.6.7"
