[package]
name = "zeque_ast"
version = "0.1.0"
edition = "2021"

[dependencies]
peg = "0.8.2"
thiserror = "1.0.58"
smallvec = "1.13.2"
wasm-encoder = "0.209.1"
clap = { version = "4.5.4", features = ["derive"] }
displaydoc = "0.2.4"
string-interner = "0.17.0"
logos = "0.14.0"
unicode-ident = "1.0.12"
smol_str = { version = "0.2.2", features = ["serde"] }
sig_lexer = { path = "../sig_lexer" }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
index_vec = { version = "0.1.4", features = ["serde"] }

[dev-dependencies]
insta = "1.40.0"
