[package]
name = "zeque_ast"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.64"
smallvec = "1.13.2"
wasm-encoder = "0.219.1"
displaydoc = "0.2.5"
string-interner = "0.17.0"
smol_str = { version = "0.3.1", features = ["serde"] }
serde = { version = "1.0.210", features = ["derive"] }
index_vec = { version = "0.1.4", features = ["serde"] }
miette = "7.2.0"

[dev-dependencies]
insta = "1.40.0"
serde_json = "1.0.128"
